--- a/index.css
+++ b/index.css
@@ -61,3 +61,12 @@ body {
     flex-basis: 50%;
     padding: 10px;
   }
+  .submit-button-container {
+    margin-top: 20px;
+  }
+  
+  .submit-button-container {
+    margin: 0 auto;
+    margin-top: 1em;
+  }
+  
